Fixes: Better wrapping for text P1

--- a/src/app/components/work-order-timeline/timeline-cell/timeline-cell.scss
+++ b/src/app/components/work-order-timeline/timeline-cell/timeline-cell.scss
@@ -145,3 +145,12 @@
 	padding: 0.1rem 0.4rem;
 	font-size: 14px;
 }
+
+.hide {
+	display: none;
+}
+
+.status-dot {
+	height: 10px;
+	border-radius: 50%;
+}
